[tool.poetry]
name = "wolt-api"
version = "0.1.0"
description = ""
authors = ["Ilya Feldman <ilyafeldm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"
pydantic-extra-types = "^2.7.0"
pycountry = "^23.12.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
